[package]
name = "genius_api_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
#base64 = "0.22.1"
dotenvy = "0.15.7"
regex = "1.11.1"
#futures = "0.3.30"
reqwest = {version = "0.12.5", features = ["blocking", "json"]}
scraper = "0.21.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
